[metadata]
name = wea
description = The Wrapped Exchange Array is a convenient way in order to exchange array data easily via processes or remote nodes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility, data, array, exchange

author = Carsten Sauerbrey
author_email = carsten.sauerbrey@gmail.com
maintainer = Carsten Sauerbrey
maintainer_email = carsten.sauerbrey@gmail.com

url = https://github.com/casabre/wea.py

license = MIT

platform = 
    Unix
    Linux
    Windows

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires = 
    numpy>=1.19.3
use_scm_version=True
setup_requires =
    setuptools_scm

[options.packages.find]
where=src

[mypy]
ignore_missing_imports = True

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    myst-parser
test =
    julia
    parameterized
    pytest
    coverage[toml]
    pytest-cov
